--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=junu1800
-DB_NAME=pricelistdb
+DB_USER=aswin
+DB_PASSWORD=postgres
+DB_NAME=aswin_db
 DB_PORT=5432
 JWT_SECRET=supersecretkey
